raphael: enable CONFIG_PROCESS_RECLAIM
It takes long time to see new syscall for process_madvise so
let's use perproc reclaim interface like other old pixel devices.

Bug: 131016077
Change-Id: I29decc666dcfe12f8349eeb19f86c6127d0b3aad
Signed-off-by: Minchan Kim <minchan@google.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -67,6 +67,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
 CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
