--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -447,6 +447,7 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_NPU=y
 CONFIG_DRM=y
+CONFIG_EXPOSURE_ADJUSTMENT=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_ARMCLCD=y
