ARM: dts: msm: disable cont-splash-region for QCS610/QCS410
Since splash is not enabled for these devices, removing
the reserved memory.

Change-Id: I2d6f6bda93832b50da990096b266120cf5bf72eb
Signed-off-by: Venkata Prahlad Valluru <vvalluru@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/qcs610-iot.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs610-iot.dtsi
@@ -418,6 +418,10 @@
 	connectors = <&sde_rscc &sde_wb &sde_dsi>;
 };
 
+&cont_splash_memory {
+	status = "disabled";
+};
+
 &disp_rdump_memory {
 	status = "disabled";
 };
