Revert "ARM: dts: Remove clock setting entry in dtsi"
This reverts commit 68af6d944cd974ebc3b2f9c246f76c0173548955.

Change-Id: Ie29dcdfa7ce9cd360313cf80f6ec460c04556c0b
Signed-off-by: Meghana Reddy Mula <mmula@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdx-audio-lpass.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdx-audio-lpass.dtsi
@@ -270,6 +270,7 @@
 		qcom,msm-cpudai-tdm-group-num-ports = <2>;
 		qcom,msm-cpudai-tdm-group-port-id = <36880 36882>;
 		qcom,msm-cpudai-tdm-clk-rate = <12288000>;
+		qcom,msm-cpudai-tdm-clk-internal = <1>;
 		qcom,msm-cpudai-tdm-sync-mode = <0>;
 		qcom,msm-cpudai-tdm-sync-src = <1>;
 		qcom,msm-cpudai-tdm-data-out = <0>;
@@ -294,6 +295,7 @@
 		qcom,msm-cpudai-tdm-group-num-ports = <2>;
 		qcom,msm-cpudai-tdm-group-port-id = <36881 36883>;
 		qcom,msm-cpudai-tdm-clk-rate = <12288000>;
+		qcom,msm-cpudai-tdm-clk-internal = <1>;
 		qcom,msm-cpudai-tdm-sync-mode = <0>;
 		qcom,msm-cpudai-tdm-sync-src = <1>;
 		qcom,msm-cpudai-tdm-data-out = <0>;
