ARM64: configs: raphael: Enable dead code elimination
This reduces the kernel's size considerably and doesn't incur any
performance penalty when used in conjunction with LTO.

Change-Id: I808fbfb29b080052033f73c7b4c9221a5ade3b48
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -48,6 +48,7 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 # CONFIG_VMAP_STACK is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
