scripts: Start of IMMENS1TY-X
Change-Id: I754ca95878ba910f777cdee0ed947e2001c356b4
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-IMMENSiTY"
+CONFIG_LOCALVERSION="-IMMENS1TY-X"
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
