--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
@@ -121,114 +121,129 @@
 				qcom,mdss-dsi-panel-clockrate = <1100000000>;
 				qcom,mdss-dsi-panel-jitter = <0x5 0x1>;
 				qcom,mdss-dsi-on-command = [
-					/* Sleep Out */
+					/* Sleep Out (Wait 10ms: 0x0A) */
 					05 01 00 00 0A 00 02 11 00
-
-					/* Unlock */
+					/* Test Key Enable: F0 */
 					39 01 00 00 00 00 03 F0 5A 5A
-
 					/* TE OUT(Vsync On) */
-					39 01 00 00 00 00 02 35 00
-
+					15 01 00 00 00 00 02 35 00
 					/* DBV Smooth Transition */
 					39 01 00 00 00 00 03 B7 01 4B
-
-					/* Lock */
+					/* Test Key Disable: F0 */
 					39 01 00 00 00 00 03 F0 A5 A5
-
 					/* Page Address Set */
-					39 01 00 00 00 00 05 2B 00 00 09 23
-
-					/* Unlock */
+					39 01 00 00 00 00 05 2A 00 00 04 37
+					39 01 00 00 00 00 05 2B 00 00 09 5F
+					/* Test Key Enable: F0 */
 					39 01 00 00 00 00 03 F0 5A 5A
+					/* Test Key Enable: FC */
 					39 01 00 00 00 00 03 FC 5A 5A
-
 					/* Set DDIC internal HFP */
 					39 01 00 00 00 00 02 B0 23
 					39 01 00 00 00 00 02 D1 0F
-
-					/* ESD Setting */
+					/* FFC Setting: MIPI Speed 82.6Mhz */
+					39 01 00 00 00 00 0C E9 11 55 A6 75 A3 B8 BB 2A 00 1A B8
+					/* ERR_FG Settings */
 					39 01 00 00 00 00 07 E1 00 00 02 02 42 02
 					39 01 00 00 00 00 07 E2 00 00 00 00 00 00
 					39 01 00 00 00 00 02 B0 0C
 					39 01 00 00 00 00 02 E1 19
-
-					/* OFC Setting */
-					39 01 00 00 00 00 0C E9 11 55 A6 75 A3 B9 A1 4A 00 1A B8
-
-					/* Lock */
+					/* Test Key Disable: F0 */
 					39 01 00 00 00 00 03 F0 A5 A5
+					/* Test Key Disable: FC */
 					39 01 00 00 00 00 03 FC A5 A5
-
-					/* Brightness Control */
-					39 01 00 00 00 00 02 53 20
+					/* Brightness Setting */
+					/* HBM Off */
+					15 01 00 00 00 00 02 53 20
+					/* Brightness */
 					39 01 00 00 00 00 03 51 00 00
+					/* ACL OFF */
 					39 01 00 00 43 00 02 55 00
-
-					/* Display On */
+					/* Test Key Disable: F0 */
+					39 01 00 00 00 00 03 F0 A5 A5
+					/* Display On (29h) */
 					05 01 00 00 00 00 02 29 00
 				];
 				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-off-command = [
-					/* Display Off */
-					05 01 00 00 00 00 02 28 00
-
+					/* Display Off (Wait 20ms: 0x14) */
+					05 01 00 00 14 00 02 28 00
 					/* Sleep In */
 					05 01 00 00 78 00 02 10 00
 				];
 				qcom,mdss-dsi-off-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-doze-hbm-command = [
-					/* AOD ON Sequence (Normal To AOD HBM) */
+					/* Test Key Enable: F0 */
 					39 01 00 00 00 00 03 F0 5A 5A
+					/* ? */
 					39 01 00 00 00 00 02 D4 8B
+					/* HLPM SELECT 1 */
 					39 01 00 00 00 00 02 B0 A5
+					/* HLPM SELECT 2 */
 					39 01 00 00 00 00 02 C7 00
+					/* HLPM AOR 1 */
 					39 01 00 00 00 00 02 B0 69
+					/* HLPM AOR 2 */
 					39 01 00 00 00 00 03 B9 08 8F
-					39 01 00 00 01 00 02 53 22
+					/* HLPM On: 50nit */
+					15 01 00 00 00 00 02 53 22
+					/* Test Key Disable: F0 */
 					39 01 00 00 00 00 03 F0 A5 A5
 				];
 				qcom,mdss-dsi-doze-hbm-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-doze-lbm-command = [
-					/* AOD ON Sequence (Normal To AOD LBM) */
+					/* Test Key Enable: F0 */
 					39 01 00 00 00 00 03 F0 5A 5A
+					/* ? */
 					39 01 00 00 00 00 02 D4 8B
+					/* HLPM SELECT 1 */
 					39 01 00 00 00 00 02 B0 A5
+					/* HLPM SELECT 2 */
 					39 01 00 00 00 00 02 C7 00
+					/* HLPM AOR 1 */
 					39 01 00 00 00 00 02 B0 69
+					/* HLPM AOR 2 */
 					39 01 00 00 00 00 03 B9 08 8F
-					39 01 00 00 00 00 02 53 23
+					/* HLPM on: 10nit */
+					15 01 00 00 00 00 02 53 23
+					/* Test Key Disable: F0 */
 					39 01 00 00 00 00 03 F0 A5 A5
 				];
 				qcom,mdss-dsi-doze-lbm-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-nolp-command = [
-					/* AOD OFF Sequence (AOD To Normal) */
+					/* Display Off (Wait 16ms: 0x10) */
 					05 01 00 00 10 00 02 28 00
-					39 01 00 00 00 00 02 53 20
+					/* HBM off + Disable brightness dimming */
+					15 01 00 00 00 00 02 53 20
+					/* Display on (29h) */
 					05 01 00 00 00 00 02 29 00
 				];
 				qcom,mdss-dsi-nolp-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-dispparam-hbm-off-command = [
-					39 01 00 00 10 00 02 53 28
+					/* HBM off + Enable brightness dimming */
+					15 01 00 00 00 00 02 53 28
 				];
 				qcom,mdss-dsi-dispparam-hbm-off-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-dispparam-hbm-on-command = [
-					39 01 00 00 00 00 02 53 E8
+					/* HBM on + Disable brightness dimming */
+					15 01 00 00 00 00 02 53 E8
 				];
 				qcom,mdss-dsi-dispparam-hbm-on-command-state = "dsi_lp_mode";
 
 				qcom,mdss-dsi-dispparam-hbm-fod-off-command = [
-					15 01 00 00 10 00 02 53 20
+					/* HBM off + Disable brightness dimming */
+					15 01 00 00 08 00 02 53 20
 				];
 				qcom,mdss-dsi-dispparam-hbm-fod-off-command-state = "dsi_hs_mode";
 
 				qcom,mdss-dsi-dispparam-hbm-fod-on-command = [
+					/* HBM on + Disable brightness dimming */
 					15 01 00 00 10 00 02 53 E0
 				];
 				qcom,mdss-dsi-dispparam-hbm-fod-on-command-state = "dsi_hs_mode";
@@ -236,3 +251,4 @@
 		};
 	};
 };
+
