--- a/arch/arm64/boot/dts/qcom/sm8150-lemur.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-lemur.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2020, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2020-2021, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -107,7 +107,6 @@
 			mhi,offload-chan;
 			mhi,lpm-notify;
 			mhi,event-ring = <8>;
-			status = "disabled";
 		};
 
 		mhi_chan@103 {
@@ -354,7 +353,6 @@
 			mhi,offload-chan;
 			mhi,lpm-notify;
 			mhi,event-ring = <8>;
-			status = "disabled";
 		};
 
 		mhi_chan@103 {
