--- a/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
@@ -537,6 +537,12 @@ And public attribution of xiaomi platforms(like F1 and so and)
 		qcom,hw-settle-time = <200>;
 	};
 
+	sdm_therm {
+		reg = <ADC_AMUX_THM2_PU2>;
+		qcom,ratiometric;
+		qcom,hw-settle-time = <200>;
+	};
+
 	pa_therm1 {
 		reg = <ADC_AMUX_THM3_PU2>;
 		qcom,ratiometric;
@@ -582,6 +588,39 @@ And public attribution of xiaomi platforms(like F1 and so and)
 		polling-delay = <0>;
 		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150_adc_tm ADC_XO_THERM_PU2>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	sdm-therm {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-governor = "user_space";
+		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+			shutdown-config {
+				temperature = <60000>;
+				hysteresis = <1000>;
+				type = "critical";
+			};
+		};
+	};
+
+	sdm-therm-monitor {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-governor = "user_space";
+		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
 				temperature = <125000>;
