ARM64: configs: cepheus: Enable cepheus specific configs
Change-Id: I16fc3a4cc9a4ec9c444bdc51377e32598ab0ff07

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -59,7 +59,7 @@ CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_MACH_XIAOMI=y
-CONFIG_MACH_XIAOMI_RAPHAEL=y
+CONFIG_MACH_XIAOMI_CEPHEUS=y
 CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_PCI_MSM_MSI=y
@@ -277,12 +277,10 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
-CONFIG_TI_DRV8846=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_OKL4_USER_VIRQ=y
-CONFIG_AKM09970=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
@@ -345,6 +343,7 @@ CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
+CONFIG_LAST_TOUCH_EVENTS=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_GOODIX_TA=y
 CONFIG_KEYBOARD_GPIO=y
@@ -352,8 +351,12 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_GOODIX_GTX8=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
+CONFIG_TOUCHSCREEN_ST_FTS_V521=y
+CONFIG_FTS_FOD_AREA_REPORT=y
+CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
+CONFIG_SECURE_TOUCH=y
+CONFIG_I2C_BY_DMA=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QTI_HAPTICS=y
@@ -385,6 +388,7 @@ CONFIG_QCOM_DLOAD_MODE=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_FG_GEN4=y
+CONFIG_IDT_P9220=y
 CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_SMB1390_CHARGE_PUMP=y
@@ -409,12 +413,14 @@ CONFIG_MFD_I2C_PMIC=y
 CONFIG_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
-CONFIG_REGULATOR_QPNP_AMOLED=y
 CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
-# CONFIG_RC_CORE is not set
+CONFIG_LIRC=y
+CONFIG_RC_DEVICES=y
+CONFIG_IR_SPI=y
+CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
@@ -426,6 +432,7 @@ CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SPECTRA_CAMERA=y
+CONFIG_VCM_AK7374=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
@@ -616,6 +623,7 @@ CONFIG_DEVFREQ_GOV_CDSPL3=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
+CONFIG_US_PROXIMITY=y
 CONFIG_PWM=y
 CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_KGSL=y
@@ -633,6 +641,7 @@ CONFIG_ESOC_CLIENT=y
 CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
+CONFIG_TRUSTY=y
 CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
 CONFIG_EXT4_FS=y
@@ -692,6 +701,7 @@ CONFIG_CRYPTO_DRBG_CTR=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_DEV_VIRTIO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
@@ -706,6 +716,7 @@ CONFIG_DOLBY_LICENSE=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_DTS_EAGLE=y
 CONFIG_MSM_CDC_PINCTRL=y
+CONFIG_MSM_CSPL=y
 CONFIG_MSM_GLINK_SPI_XPRT=y
 CONFIG_MSM_QDSP6_APRV2_RPMSG=y
 CONFIG_MSM_QDSP6_NOTIFIER=y
@@ -717,14 +728,14 @@ CONFIG_PINCTRL_WCD=y
 CONFIG_QTI_PP=y
 CONFIG_REGMAP_SWR=y
 CONFIG_SND_HWDEP_ROUTING=y
+CONFIG_SND_SOC_CS35L41=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
 CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_SND_SOC_SM8150=y
-CONFIG_SND_SOC_TFA9874=y
-CONFIG_SND_SOC_TFA9874_FOR_DAVI=y
+CONFIG_SND_SOC_TAS2557=y
 CONFIG_SND_SOC_WCD934X=y
 CONFIG_SND_SOC_WCD934X_DSD=y
 CONFIG_SND_SOC_WCD934X_MBHC=y
@@ -738,6 +749,9 @@ CONFIG_SND_SOC_WCD_SPI=y
 CONFIG_SND_SOC_WSA881X=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
+CONFIG_TAS2557_REGMAP=y
+CONFIG_TAS2557_CODEC=y
+CONFIG_TAS2557_MISC=y
 CONFIG_VOICE_MHI=y
 CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
