ARM64: dts: ea8076: Add 16ms delays for fod-hbm-off
Change-Id: I2633f4086af34ca030460819b85f01f91feee7b3

--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
@@ -348,7 +348,7 @@
 					39 00 00 00 00 00 02 B5 13
 					39 01 00 00 07 00 03 F0 A5 A5
 					/* HBM mode off */
-					15 00 00 00 00 00 02 53 20
+					15 01 00 00 10 00 02 53 20 // delay 16ms: 0x10
 					39 00 00 00 00 00 03 F0 5A 5A
 					39 00 00 00 00 00 02 C7 23
 					39 00 00 00 00 00 02 B0 34
