ARM64: dts: ea8076: Force nolp commands to HS clock
Change-Id: I3b2f692e4a4a997b462a7a6329425bad7e530925

--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-cmd.dtsi
@@ -207,13 +207,13 @@
 					/* Display Off (Wait 16ms: 0x10) */
 					05 01 00 00 10 00 02 28 00
 					/* HBM off + Disable brightness dimming */
-					39 01 00 00 00 00 02 53 20
+					15 01 00 00 00 00 02 53 20
 					/* Display on (29h) */
 					05 01 00 00 00 00 02 29 00
 				];
 				qcom,mdss-dsi-doze-hbm-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-doze-lbm-command-state = "dsi_lp_mode";
-				qcom,mdss-dsi-nolp-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-nolp-command-state = "dsi_hs_mode";
 
 				qcom,mdss-dsi-dispparam-acl-off-command = [39 01 00 00 00 00 02 55 00];
 				qcom,mdss-dsi-dispparam-acl-off-command-state = "dsi_lp_mode";
