--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -715,6 +715,7 @@ CONFIG_DOLBY_DS2=y
 CONFIG_DOLBY_LICENSE=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_DTS_EAGLE=y
+CONFIG_ELLIPTIC_ULTRASOUND=y
 CONFIG_MSM_CDC_PINCTRL=y
 CONFIG_MSM_CSPL=y
 CONFIG_MSM_GLINK_SPI_XPRT=y
