ARM: dts: msm: Add BOOT_CONFIG shift support for sdxprairie
Add BOOT_CONFIG shift support in device tree to read specific
offset for EDL flashing over PCIe.

Change-Id: I705d7317608989dfaf9338097f17f91d9fc9ba9b
Signed-off-by: Naina Mehta <nainmeht@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdxprairie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdxprairie.dtsi
@@ -264,6 +264,7 @@
 		      <0x00786070 0x4>;
 		reg-names = "pshold-base", "tcsr-boot-misc-detect",
 				"boot-config";
+		qcom,boot-config-shift = <4>;
 	};
 
 	qcom,wdt@17817000 {
